--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,6 @@
         app:axisTextColor="#2B2B2B"
         app:pillarsColor="#1175B7"
         app:unit="单位：%"
+        app:showPillarsText="true"
         />
 </LinearLayout>
