--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,6 +11,10 @@
         <attr name="axisWidth" format="dimension"/>
         <!--柱子颜色-->
         <attr name="pillarsColor" format="color"/>
+        <!--柱子上标注文字颜色-->
+        <attr name="pillarsTextColor" format="color"/>
+        <!--是否显示柱子上标注文字-->
+        <attr name="showPillarsText" format="boolean"/>
         <!--纵坐标单位间隔量（默认5）-->
         <attr name="verticalUnitCount" format="integer"/>
         <!--纵坐标总量（默认100）-->
